[tool.poetry]
name = "theiondevices"
version = "0.1.0"
description = ""
authors = ["saravanan-theion <saravanan@theion.de>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
black='23.3.0'
certifi='2023.7.22'
charset-normalizer='3.2.0'
click='8.1.7'
colorama='0.4.6'
coverage='7.3.0'
decorator='5.1.1'
flake8='6.0.0'
idna='3.4'
iniconfig='2.0.0'
load-dotenv='0.1.0'
mccabe='0.7.0'
mypy-extensions='1.0.0'
packaging='23.1'
pathspec='0.11.2'
platformdirs='3.10.0'
pluggy='1.3.0'
py='1.11.0'
pycodestyle='2.10.0'
pyflakes='3.0.1'
Pypubsub='4.0.3'
pyserial='3.5'
pyserial-asyncio='0.6'
pytest='7.3.1'
pytest-asyncio='0.21.0'
pytest-cov='4.0.0'
pytest-mock='3.10.0'
python-dateutil='2.8.2'
python-dotenv='1.0.0'
pytz='2023.3'
PyYAML='6.0'
requests='2.30.0'
retry='0.9.2'
six='1.16.0'
urllib3='2.0.4'




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Python-style entrypoints and scripts are easily expressed
#[tool.poetry.scripts]
#my-script = "TheionDevices:main"
#build = "poetry run pyinstaller main.py --collect-submodules application --onefile --name myapi"